# The-Xavier-Blueprint

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
harness/: main.py  orchestrator.py  state.py
harness/agents/: base.py  brain.py  content.py  insights.py  personality.py  responder.py  sequencer.py
src/creator_ai/: __init__.py  main.py  pricing.py
src/creator_ai/layers/: __init__.py  layer1_personality.py  layer2_5_analytics.py  layer2_brain.py  layer3_mini_apps.py  layer4_sequencer.py  layer5_response.py  layer6_5_intelligence.py  layer6_alerts.py
src/creator_ai/models/: __init__.py  archetypes.py  content.py  engagement.py  personality.py
src/creator_ai/routers/: __init__.py  alerts.py  brain.py  content.py  personality.py  response.py  sequencer.py
tests/: __init__.py  test_layer1_personality.py  test_layer2_brain.py  test_layer3_mini_apps.py  test_layer6_alerts.py  test_pricing.py
